# synapse

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/synapse/: __init__.py
src/synapse/autodiff/: context.py  node.py
src/synapse/tensor/: tensor.py  tensor_ops.py
