[project]
name = "synapse"
version = "0.1.0"
description = "A lean CPU only DNN library"
readme = "README.md"
authors = [
    { name = "The Synapse Authors" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[project.scripts]
synapse = "synapse:main"

# We might eventually shift to a setuptools based build
# when the decision to move to C++ is finalized.
[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
